Implement scenario test framework (game tests)
Also migrates a lot of places to use Keys instead of Strings